fix 支持Java8兼容